# Petunin_ellipse_3d_Realization

./: CMakeLists.txt  Circle.h  Cube.h  LineEquation.h  MathTools.h  Rectangle.h  Sphere.h  main.cpp
